# trail-intel

./: .gitignore  .sonarcloud.properties  LICENSE  README.md  pyproject.toml  run.sh
.github/ISSUE_TEMPLATE/: generate-forecast-report.yml  generate-race-report.yml
.github/workflows/: ci.yml  deploy-pwa.yml  generate-forecast-report.yml  generate-race-report.yml  seed-score-repo.yml
src/trailintel/: __init__.py  backfill_pages.py  cache_store.py  cli.py  github_pipeline.py  matching.py  models.py  participants.py  report.py  score_cli.py  score_repo.py  site.py  streamlit_app.py
src/trailintel/forecast/: __init__.py  __main__.py  align.py  bundle.py  cli.py  engine.py  errors.py  github_pipeline.py  gpx_route.py  map_tiles.py  models.py  render.py  site.py  time_utils.py  weather.py
src/trailintel/providers/: __init__.py  betrail.py  itra.py  utmb.py
tests/: forecast_test_support.py  test_backfill_pages.py  test_betrail_provider.py  test_cache_store.py  test_catalog_matching.py  test_forecast_align.py  test_forecast_bundle.py  test_forecast_cli.py  test_forecast_engine.py  test_forecast_github_pipeline.py  test_forecast_gpx_route.py  test_forecast_time_utils.py  test_forecast_weather.py  test_github_pipeline.py  test_itra_resilience.py  test_matching.py  test_participants.py  test_provider_search.py  test_report.py  test_score_cli.py  test_score_repo.py  test_score_repo_integration.py  test_site.py  test_streamlit_state.py  test_threshold.py  test_trailintel_package.py  test_utmb_urls.py
tests/fixtures/: workflow_smoke_participants.csv
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: manifest.webmanifest  service-worker.js
web/scripts/: smoke-deployed-pwa.mjs
web/src/: main.ts  styles.css
(+24 files in other folders)
