[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trailintel"
version = "0.1.0"
description = "TrailIntel: trail race participant enrichment with UTMB index and ITRA score."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
  "streamlit>=1.41.0",
  "duckdb>=1.1.0",
  "cryptography>=42.0.0",
  "gpxpy>=1.6.2",
  "google-auth>=2.30.0",
  "google-auth-oauthlib>=1.2.0",
  "google-api-python-client>=2.125.0",
  "httpx>=0.27.2",
  "matplotlib>=3.9.2",
  "pillow>=10.4.0",
  "typer>=0.12.5",
]

[project.scripts]
trailintel = "trailintel.cli:main"
trailintel-forecast = "trailintel.forecast.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
