[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trailintel"
version = "0.1.0"
description = "TrailIntel: trail race participant enrichment with UTMB index and ITRA score."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
  "cryptography>=42.0.0",
  "gpxpy>=1.6.2",
  "httpx>=0.27.2",
  "matplotlib>=3.9.2",
  "pillow>=10.4.0",
  "typer>=0.12.5",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.15.9",
]

[project.scripts]
trailintel = "trailintel.cli:main"
trailintel-forecast = "trailintel.forecast.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
